--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^16.13.0",
     "react-feather": "^2.0.3",
     "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
@@ -45,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
     "json-server": "^0.16.1",
     "node-sass": "^4.13.1"
   }
