--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.0",
     "connected-react-router": "^6.7.0",
     "flexboxgrid": "^6.3.1",
+    "flexboxgrid-helpers": "^1.1.3",
     "history": "^4.10.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
