--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.19.2",
     "connected-react-router": "^6.7.0",
     "flexboxgrid": "^6.3.1",
     "flexboxgrid-helpers": "^1.1.3",
