--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "start": "json-server --port 3001 --watch server/db.json & react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "tslint --fix 'src/**/*.{ts,tsx,js}'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -53,6 +54,12 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "json-server": "^0.16.1",
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.13.1",
+    "prettier": "^1.19.1",
+    "tslint": "^6.0.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.1.0",
+    "tslint-react": "^4.2.0",
+    "typescript-tslint-plugin": "^0.5.5"
   }
 }
