--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "scripts": {
     "start": "json-server --port 3001 --watch server/db.json & react-scripts start",
+    "start:server": "json-server --port 3001 --watch server/db.json",
+    "start:webapp": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
